--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/Cerebrum-HQ/cerebrum-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.12",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
