--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "env-cmd -f ./config/test.env jest --watch",
+    "test": "env-cmd -f ./config/test.env jest",
     "start": "env-cmd -f ./config/dev.env nodemon server.js"
   },
   "repository": {
