--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "env-cmd -f jest",
-    "start": "env-cmd -f nodemon server.js"
+    "test": "env-cmd -f .env jest",
+    "start": "env-cmd -f .env nodemon server.js"
   },
   "repository": {
     "type": "git",
